# lumina

./: .emergency-branch-backup  .emergency-status  .gitignore  .gitmodules  .release-notes-v0.17.0.md  .release-notes-v0.17.1.md  AETHERLIGHT_INFRASTRUCTURE_OVERVIEW.md  ALL_MIGRATIONS.sql  ARCHITECTURE_CORRECTED.md  AUDIT_PROMPT_v0.15.0.md  AUDIT_PROMPT_v0.15.1.md  AUDIT_PROMPT_v0.15.3.md  AUDIT_REPORT_v0.16.1.md  AUDIT_RESULTS_v0.15.34.md  BRANCH_CLEANUP_ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_PROTECTION_POLICY.md  CONTRIBUTING.md  DESKTOP-001_ANALYSIS.md  EMERGENCY_CLEANUP_SUMMARY.md  GITHUB_ISSUE_RESOLUTIONS.md  ISSUE_RESOLUTION_MAP.md  KEY_AUTHORIZATION_ANALYSIS.md  KNOWN_TEST_ISSUE_WINDOWS_SPACES.md  LICENSE  MANUAL_TEST_PROTECT-000A.md  MANUAL_TEST_PROTECT-000B.md  MANUAL_TEST_PROTECT-000C.md  MANUAL_TEST_PROTECT-000D.md  MANUAL_TEST_PROTECT-001.md  MANUAL_TEST_PROTECT-002.md  MIGRATION_GUIDE.md  NPM_PUBLISHING_GUIDE.md  NPM_SCOPE_SETUP.md  PHASE_3-5_MANUAL_TEST_PLAN.md  POST_RELEASE_TEST.md  PRE_PUBLISH_AUDIT_v0.16.7.md  PRE_PUBLISH_VALIDATION_v0.17.0.md  PRE_PUBLISH_VERIFICATION_v0.16.1.md  (+51 more)
.aetherlight/: config.json  context-changes.md
.claude/: AUDIT_STRATEGY.md  CLAUDE.md  enforcement.json  settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.tauri-keys/: .gitignore
crates/aetherlight-core/: ARCHITECTURE.md  BENCHMARKING.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  Cargo.toml  README.md  WINDOWS_BUILD_ISSUES.md  build.rs  test_config_standalone.rs
crates/aetherlight-core/.cargo/: config.toml
crates/aetherlight-core/.lumina/: cross-ref-index.json
crates/aetherlight-core/benches/: pattern_matching.rs
crates/aetherlight-core/examples/: knowledge_agent_with_content_addressing.rs
crates/aetherlight-core/src/: agent_network.rs  code_map.rs  confidence.rs  content_addressing.rs  context_loader.rs  domain_agent.rs  domain_pattern_library.rs  domain_router.rs  embeddings.rs  error.rs  experiment_runner.rs  improvement_reports.rs  lib.rs  matching.rs  pattern.rs  pattern_index.rs  session_handoff.rs  shared_knowledge.rs  sop_updater.rs  transcription.rs  uncertainty.rs  validation_agent.rs  verification.rs
crates/aetherlight-core/src/agents/: README.md  deployment.rs  ethics.rs  infrastructure.rs  innovation.rs  knowledge.rs  mod.rs  quality.rs  scalability.rs
crates/aetherlight-core/src/analytics/: metrics.rs  mod.rs  tracker.rs
crates/aetherlight-core/src/cli/: config.rs  mod.rs
crates/aetherlight-core/src/code_intelligence/: chunking.rs  indexer.rs  mod.rs  search.rs
crates/aetherlight-core/src/code_map/: dependency_graph.rs  exporter.rs  impact_analyzer.rs  parser.rs
crates/aetherlight-core/src/config/: features.rs  loader.rs  mod.rs  policy.rs  sync.rs  terminal.rs  validator.rs
crates/aetherlight-core/src/context_loader/: analyzer.rs  assembler.rs  loader.rs
crates/aetherlight-core/src/conversation_manager/: manager.rs  mod.rs  types.rs
crates/aetherlight-core/src/crypto/: mod.rs  shamir.rs
crates/aetherlight-core/src/experiment_runner/: executor.rs  reporter.rs  statistics.rs
crates/aetherlight-core/src/function_call_generator/: extractors.rs  generator.rs  mod.rs  types.rs
crates/aetherlight-core/src/function_registry/: mod.rs  registry.rs  types.rs
crates/aetherlight-core/src/ipc/: mod.rs  reader.rs  types.rs  writer.rs
crates/aetherlight-core/src/network/: dht.rs  mod.rs  routing_table.rs  rpc.rs
crates/aetherlight-core/src/pattern_index/: embedder.rs  ranker.rs  search.rs
crates/aetherlight-core/src/realtime_sync/: auth.rs  mod.rs  persistence.rs  server.rs  types.rs
crates/aetherlight-core/src/session_handoff/: generator.rs  loader.rs  types.rs
crates/aetherlight-core/src/shared_knowledge/: database.rs  discovery.rs  query.rs  sync.rs
crates/aetherlight-core/src/sprint_parser/: dependency_graph.rs  mod.rs  types.rs  validator.rs  yaml_parser.rs
crates/aetherlight-core/src/task_scheduler/: executor.rs  mod.rs  monitor.rs  scheduler.rs
crates/aetherlight-core/src/uncertainty/: README.md  calibrator.rs  confidence_scorer.rs  types.rs
crates/aetherlight-core/src/validation/: mod.rs  quality.rs  security.rs  validator.rs
crates/aetherlight-core/src/validation_agent/: analyzer.rs  tracker.rs  types.rs
crates/aetherlight-core/src/vector_store/: mod.rs  sqlite.rs
crates/aetherlight-core/src/verification/: claim_parser.rs  file_verifier.rs  function_verifier.rs  performance_verifier.rs  test_verifier.rs
crates/aetherlight-core/src/viral/: invitation.rs  mod.rs  storage_quota.rs
crates/aetherlight-core/tests/: context_loader_tests.rs  intelligence_layer_tests.rs  phase3_tests.rs  uncertainty_integration_tests.rs
docs/: AGENT_ENHANCEMENT_RELEASES.md  AGENT_UPDATE_REMAINING_5_FILES.md  API_ENDPOINTS_v0.17.0.md  BACKWARD_COMPATIBLE_ENHANCEMENT_PHILOSOPHY.md  CONFIGURATION_SYSTEM.md  CONFIG_SCHEMA.md  DESKTOP_UPDATE_MECHANISM.md  DESKTOP_WEBSITE_SYNC_v0.17.2.md  ENHANCED_PROMPT_V1.3_IMPLEMENTATION_SUMMARY.md  GENERIC_ENHANCED_PROMPT_ARCHITECTURE.md  POST_MORTEM_v0.13.23.md  README.md  READY_TO_COMMIT_ENHANCED_PROMPT_V1.3.md  RIPPLE_ANALYSIS_v0.17.2.md  ROADMAP.md  SPRINT_17.2_MANUAL_TEST_ENHANCED_PROMPT_V1.3.md  TESTING_GUIDE.md  TESTING_v0.17.2.md  TROUBLESHOOTING.md  WEBSITE_DOCS_SPRINT_3.md  WEBSITE_VALIDATION_BUG-002A.md  WINDOWS_MSI_INSTALLER.md  variable-reference.md
internal/: MAC_SUPPORT_STRATEGY.md
products/lumina-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
products/lumina-desktop/src-tauri/icons/: icon.icns
products/lumina-desktop/src-tauri/src/: auth.rs  main.rs  transcription.rs  voice.rs
products/lumina-desktop/src-tauri/src/ipc_server/: mod.rs  types.rs  unified_protocol.rs
products/lumina-desktop/src-tauri/src/storage/: mod.rs  postgres.rs  sqlite.rs  types.rs
products/lumina-desktop/src-tauri/src/system_context/: doc_tracker.rs  file_watcher.rs  git_monitor.rs  mod.rs  types.rs
schemas/: pattern.schema.json
scripts/: README.md  README_PATTERN_DEPLOYMENT.md  bump-version.js  complete-phase.sh  complete-task.sh  create-project-docs-table.sql  (+62 more)
(+648 files in other folders)
