[package]
name = "lumina-desktop"
version = "0.18.9"
edition = "2021"
authors = ["ÆtherLight Team"]
description = "Lumina Desktop - Voice-to-intelligence desktop application"

# DESIGN DECISION: Tauri 2.0 for lightweight desktop app (<3MB binary)
# WHY: 18x smaller than Electron, <500ms startup, <50MB memory idle
#
# REASONING CHAIN:
# 1. Electron: 80MB+ binaries, 500ms+ startup, 100MB+ memory
# 2. Tauri: Uses system WebView (no Chromium bundled)
# 3. Result: 2.5MB binaries, 350ms startup, 35MB idle memory
# 4. Perfect fit for voice capture desktop app
#
# PATTERN: Pattern-TAURI-001 (Lightweight Desktop App)
# PERFORMANCE: <500ms startup, <50MB memory, <3MB binary
# RELATED: P2-003 (Voice Capture), aetherlight-core

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-updater = "2.0"  # BUG-006: Auto-update mechanism
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Voice capture (P2-003)
cpal = "0.15"
thiserror = "1.0"
rubato = "0.15"  # Audio resampling (native rate → 16kHz for Whisper)

# OpenAI Whisper API + keyboard simulation
reqwest = { version = "0.11", features = ["json", "multipart"] }
hound = "3.5"  # WAV encoding for audio
enigo = "0.2.1"  # Cross-platform keyboard simulation
anyhow = "1.0"  # Error handling

# License validation (BUG-002)
sha2 = "0.10"  # SHA-256 hashing for device fingerprint
mac_address = "1.1"  # MAC address retrieval for device fingerprint

# Async runtime and IPC
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"  # WebSocket for IPC
futures-util = "0.3"  # Async utilities

# File system monitoring
notify = "6.0"

# Settings persistence
directories = "5.0"
dirs = "5.0"
toml = "0.8"

# Core library integration
aetherlight-core = { path = "../../../crates/aetherlight-core" }

# Analytics (P3-006)
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
tempfile = "3.8"  # Temporary directories for tests

[features]
default = []

[[bin]]
name = "lumina-desktop"
path = "src/main.rs"
